GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Seating_requirements_Return__c.field-meta.xml
<CustomField>
    <fullName>Seating_requirements_Return__c</fullName>
    <description>This field will be used to describe if there is any seating requirements for the return journey.</description>
    <label>Seating requirements (Return)</label>
    <type>TextArea</type>
</CustomField>