GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Staff_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_First_Name__c</fullName>
    <description>This field will be used for the first name of the staff.</description>
    <label>Staff First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>