GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Staff_Last_name__c.field-meta.xml
<CustomField>
    <fullName>Staff_Last_name__c</fullName>
    <label>Staff Last name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>