GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Staff_pass_number__c.field-meta.xml
<CustomField>
    <fullName>Staff_pass_number__c</fullName>
    <description>This field will contain  the pass number of the staff member asking for the travel.</description>
    <label>Staff pass number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>