GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Staff_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Staff_phone_number__c</fullName>
    <description>This field will contain the phone number of the staff member asking for the travel.</description>
    <label>Staff phone number</label>
    <type>Phone</type>
</CustomField>