GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/To_Outward_Aria__c.field-meta.xml
<CustomField>
    <fullName>To_Outward_Aria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the arrival station of a staff travel for Aria</description>
    <label>To (Outward)</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Staff and duty travels</relationshipLabel>
    <relationshipName>Staff_and_duty_travels</relationshipName>
    <type>Lookup</type>
</CustomField>