GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/To_Return_2__c.field-meta.xml
<CustomField>
    <fullName>To_Return_2__c</fullName>
    <description>This field will be used for the destination of the return journey of the second choice of travel.</description>
    <inlineHelpText>*only direct services &amp; no business class available</inlineHelpText>
    <label>To (Return)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>From_Return_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>London St Pancras</fullName>
            </value>
            <value>
                <fullName>Ebbsfleet</fullName>
            </value>
            <value>
                <fullName>Ashford</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Brussels</fullName>
            </value>
            <value>
                <fullName>Lille</fullName>
            </value>
            <value>
                <fullName>Calais</fullName>
            </value>
            <value>
                <fullName>Disney*</fullName>
            </value>
            <value>
                <fullName>Avignon*</fullName>
            </value>
            <value>
                <fullName>Lyon*</fullName>
            </value>
            <value>
                <fullName>Marseille*</fullName>
            </value>
            <value>
                <fullName>Bourg St Maurice*</fullName>
            </value>
            <value>
                <fullName>Aime La Plagne*</fullName>
            </value>
            <value>
                <fullName>Moutiers*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>