GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/To_Return_Aria__c.field-meta.xml
<CustomField>
    <fullName>To_Return_Aria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the arrival station of a return journey of a staff travel for Aria</description>
    <label>To (Return)</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Staff and duty travels (To (Return))</relationshipLabel>
    <relationshipName>Staff_and_duty_travels_To_Return</relationshipName>
    <type>Lookup</type>
</CustomField>