GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Type_of_booking__c.field-meta.xml
<CustomField>
    <fullName>Type_of_booking__c</fullName>
    <label>Type of booking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duty</fullName>
            </value>
            <value>
                <fullName>FIP</fullName>
            </value>
            <value>
                <fullName>Pals</fullName>
            </value>
            <value>
                <fullName>Momentum</fullName>
            </value>
            <value>
                <fullName>Eurostar Staff Voucher</fullName>
            </value>
            <value>
                <fullName>TfL</fullName>
            </value>
            <value>
                <fullName>MITIE</fullName>
            </value>
            <value>
                <fullName>Thalys Staff Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>