GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Voucher_1_used_Amount__c.field-meta.xml
<CustomField>
    <fullName>Voucher_1_used_Amount__c</fullName>
    <label>Voucher 1 used Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>