GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Voucher_1_used_ID__c.field-meta.xml
<CustomField>
    <fullName>Voucher_1_used_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher 1 used ID</label>
    <referenceTo>eVoucher__c</referenceTo>
    <relationshipLabel>Staff and duty travels</relationshipLabel>
    <relationshipName>Staff_and_duty_travels</relationshipName>
    <type>Lookup</type>
</CustomField>