GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Voucher_2_used_ID__c.field-meta.xml
<CustomField>
    <fullName>Voucher_2_used_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher 2 used ID</label>
    <referenceTo>eVoucher__c</referenceTo>
    <relationshipLabel>Staff and duty travels (Voucher 2 used ID)</relationshipLabel>
    <relationshipName>Staff_and_duty_travels1</relationshipName>
    <type>Lookup</type>
</CustomField>