GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Voucher_3_used_ID__c.field-meta.xml
<CustomField>
    <fullName>Voucher_3_used_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher 3 used ID</label>
    <referenceTo>eVoucher__c</referenceTo>
    <relationshipLabel>Staff and duty travels (Voucher 3 used ID)</relationshipLabel>
    <relationshipName>Staff_and_duty_travels2</relationshipName>
    <type>Lookup</type>
</CustomField>