GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Vouchers_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Vouchers_Received_Date__c</fullName>
    <label>Vouchers Received Date</label>
    <type>Date</type>
</CustomField>