GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/X8_Weeks__c.field-meta.xml
<CustomField>
    <fullName>X8_Weeks__c</fullName>
    <formula>IF(
(TODAY()-DATEVALUE(CreatedDate) &gt;= 70), TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 Weeks</label>
    <type>Checkbox</type>
</CustomField>