GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/recordTypes/Aria_travel.recordType-meta.xml
<RecordType>
    <fullName>Aria_travel</fullName>
    <active>true</active>
    <description>This record type is used for Aria users</description>
    <label>Aria travel (Inc. Physical Blue Vouchers)</label>
</RecordType>