GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/recordTypes/Staff_travel.recordType-meta.xml
<RecordType>
    <fullName>Staff_travel</fullName>
    <active>true</active>
    <description>This record type will be used for staff travels.</description>
    <label>Virtual Voucher Booking</label>
</RecordType>