GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/validationRules/Class_Outward2_if_BP_not_possible.validationRule-meta.xml
<ValidationRule>
    <fullName>Class_Outward2_if_BP_not_possible</fullName>
    <active>true</active>
    <description>For some destination, the Business Premier Class is not available</description>
    <errorConditionFormula>AND (
 OR(
  ISPICKVAL(From_Outward_2__c, &quot;Disney*&quot;),
  ISPICKVAL(From_Outward_2__c, &quot;Avignon*&quot;),
  ISPICKVAL(From_Outward_2__c, &quot;Lyon*&quot;),
  ISPICKVAL(From_Outward_2__c, &quot;Marseille*&quot;),
  ISPICKVAL(From_Outward_2__c, &quot;Bourg St Maurice*&quot;),
  ISPICKVAL(From_Outward_2__c, &quot;Aime La Plagne*&quot;),
  ISPICKVAL(From_Outward_2__c, &quot;Moutiers*&quot;),
  ISPICKVAL(To_Outward_2__c, &quot;Disney*&quot;),
  ISPICKVAL(To_Outward_2__c, &quot;Avignon*&quot;),
  ISPICKVAL(To_Outward_2__c, &quot;Lyon*&quot;),
  ISPICKVAL(To_Outward_2__c, &quot;Marseille*&quot;),
  ISPICKVAL(To_Outward_2__c, &quot;Bourg St Maurice*&quot;),
  ISPICKVAL(To_Outward_2__c, &quot;Aime La Plagne*&quot;),
  ISPICKVAL(To_Outward_2__c, &quot;Moutiers*&quot;)
 ),
 ISPICKVAL(Class_Outward_2__c, &quot;Business Premier&quot;)
)</errorConditionFormula>
    <errorDisplayField>Class_Outward_2__c</errorDisplayField>
    <errorMessage>The class &quot;Business Travel&quot; is not available for the stations marked with *</errorMessage>
</ValidationRule>