GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/validationRules/Eurostar_Staff_Voucher_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Eurostar_Staff_Voucher_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type_of_booking__c,&quot;Eurostar Staff Voucher&quot;)
&amp;&amp;
ISBLANK( Number_of_Vouchers__c )</errorConditionFormula>
    <errorDisplayField>Number_of_Vouchers__c</errorDisplayField>
    <errorMessage>Please enter the number of vouchers that are being used</errorMessage>
</ValidationRule>