GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/validationRules/IsTime_Departure_Time_Outward.validationRule-meta.xml
<ValidationRule>
    <fullName>IsTime_Departure_Time_Outward</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
 OR(
  ISBLANK(Departure_Time_Outward__c),

  AND(
   IF(ISNUMBER( MID(Departure_Time_Outward__c, 1, 2)    ), VALUE(MID(Departure_Time_Outward__c, 1, 2))  &lt;24,FALSE),
   IF(ISNUMBER( MID(Departure_Time_Outward__c, 4, 2) ), VALUE(MID(Departure_Time_Outward__c, 4, 2))&lt;60, FALSE),
   CONTAINS(Departure_Time_Outward__c, &quot;:&quot;)
  )  
 ) 
)</errorConditionFormula>
    <errorDisplayField>Departure_Time_Outward__c</errorDisplayField>
    <errorMessage>The time must written in the following format HH:MM</errorMessage>
</ValidationRule>