GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/listViews/All_bookings.listView-meta.xml
<ListView>
    <fullName>All_bookings</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Associated_account__c</columns>
    <columns>Type_of_booking__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>From_Outward_Aria__c</columns>
    <columns>To_Outward_Aria__c</columns>
    <columns>Departure_Date_Outward__c</columns>
    <filterScope>Everything</filterScope>
    <label>All bookings</label>
    <language>en_US</language>
</ListView>