GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/listViews/Blue_voucher_bookings_requests.listView-meta.xml
<ListView>
    <fullName>Blue_voucher_bookings_requests</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Associated_account__c</columns>
    <columns>Type_of_booking__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Staff_and_duty_travel__c.Staff_travel</value>
    </filters>
    <label>Blue voucher bookings requests</label>
    <language>en_US</language>
</ListView>