GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/listViews/FIP_booking.listView-meta.xml
<ListView>
    <fullName>FIP_booking</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Associated_account__c</columns>
    <columns>Type_of_booking__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_booking__c</field>
        <operation>equals</operation>
        <value>FIP</value>
    </filters>
    <label>FIP booking</label>
    <language>en_US</language>
</ListView>