GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/listViews/Staff_Duty_Travel_CLEAN_UP_2021.listView-meta.xml
<ListView>
    <fullName>Staff_Duty_Travel_CLEAN_UP_2021</fullName>
    <columns>Associated_account__c</columns>
    <columns>NAME</columns>
    <columns>Created_this_year__c</columns>
    <columns>Blue_vouchers_received__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type_of_booking__c</columns>
    <columns>Status_of_the_booking__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_this_year__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_YEAR</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Staff_and_duty_travel__c.Staff_travel,Staff_and_duty_travel__c.Aria_travel</value>
    </filters>
    <label>Staff &amp; Duty Travel - CLEAN UP 2021</label>
    <language>en_US</language>
</ListView>